feat(mcq): rewrite Q34-Q35 in java-modules with multi-line educational format
Q34 (jlink and automatic modules): correct=D, distractors falsely claim jlink
is deprecated, invent --ignore-signing-info flag, or suggest fat-jar fix.

Q35 (jdeps --jdk-internals): correct=B, distractors downplay Unsafe risk,
claim runtime is safe, or argue sun.misc.Unsafe is public API.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>